syntax = "proto3";

package dragon.turnstile.v1;

option java_multiple_files = true;
option java_package = "dragon.turnstile.api.v1";
option java_outer_classname = "TurnstileProto";

import "google/protobuf/empty.proto";
import "google/protobuf/timestamp.proto";
import "google/protobuf/struct.proto";
//import "dragon/common/v1/objects.proto";


option go_package = "dragon/turnstile/api/v1";



service TurnstileService {
    rpc ListMcpServers (ListMcpServersRequest)  returns (McpServerList) {}
    rpc CreateMcpServer (CreateMcpServerRequest) returns (McpServer) {}

    rpc ListTools (ListToolsRequest) returns (ToolList) {}
    rpc CreateTool (CreateToolRequest) returns (Tool) {}
}

// MCP Servers
message CreateMcpServerRequest {
    string name = 1;
    string url = 2;
}

message ListMcpServersRequest {
    string user_id = 1;
    //string page_size = 2;
    //string page_token = 3;
}

message McpServerList {
    repeated McpServer mcp_server = 1;
}


message McpServer {
    string uuid = 1;
    string name = 2;
    string url = 3;
}

// Tools

message ListToolsRequest {
    string user_id = 1;
    //string page_size = 2;
    //string page_token = 3;
}

message CreateToolRequest {
    string userId = 1;
    string tool_name = 2;
    string description = 3;
    google.protobuf.Struct schema_json = 4;
}


message ToolList {
    repeated Tool tools = 1;
    string next_page_token = 2;
}

message Tool {
    string uuid = 1;
    string name = 2;
    string description = 3;
    google.protobuf.Struct schema_json = 4;
    google.protobuf.Timestamp created_time = 5;
    google.protobuf.Timestamp updated_time = 6;
}

